qt/cbor/gen_qcborvalue.nim


proc fcQCborParserError_errorString(self: pointer, ): struct_miqt_string {.importc: "QCborParserError_errorString".}
proc fcQCborParserError_delete(self: pointer) {.importc: "QCborParserError_delete".}
proc fcQCborValue_new(): ptr cQCborValue {.importc: "QCborValue_new".}
proc fcQCborValue_new2(t_x: cint): ptr cQCborValue {.importc: "QCborValue_new2".}
proc fcQCborValue_new3(b_x: bool): ptr cQCborValue {.importc: "QCborValue_new3".}
proc fcQCborValue_new4(i: cint): ptr cQCborValue {.importc: "QCborValue_new4".}
proc fcQCborValue_new5(u: cuint): ptr cQCborValue {.importc: "QCborValue_new5".}
proc fcQCborValue_new6(i: clonglong): ptr cQCborValue {.importc: "QCborValue_new6".}
proc fcQCborValue_new7(v: float64): ptr cQCborValue {.importc: "QCborValue_new7".}
proc fcQCborValue_new8(st: cint): ptr cQCborValue {.importc: "QCborValue_new8".}
proc fcQCborValue_new9(ba: struct_miqt_string): ptr cQCborValue {.importc: "QCborValue_new9".}
proc fcQCborValue_new10(s: struct_miqt_string): ptr cQCborValue {.importc: "QCborValue_new10".}
proc fcQCborValue_new11(s: cstring): ptr cQCborValue {.importc: "QCborValue_new11".}
proc fcQCborValue_new12(a: pointer): ptr cQCborValue {.importc: "QCborValue_new12".}
proc fcQCborValue_new13(m: pointer): ptr cQCborValue {.importc: "QCborValue_new13".}
proc fcQCborValue_new14(tag: cint): ptr cQCborValue {.importc: "QCborValue_new14".}
proc fcQCborValue_new15(t_x: cint): ptr cQCborValue {.importc: "QCborValue_new15".}
proc fcQCborValue_new16(dt: pointer): ptr cQCborValue {.importc: "QCborValue_new16".}
proc fcQCborValue_new17(url: pointer): ptr cQCborValue {.importc: "QCborValue_new17".}
proc fcQCborValue_new18(rx: pointer): ptr cQCborValue {.importc: "QCborValue_new18".}
proc fcQCborValue_new19(uuid: pointer): ptr cQCborValue {.importc: "QCborValue_new19".}
proc fcQCborValue_new20(other: pointer): ptr cQCborValue {.importc: "QCborValue_new20".}
proc fcQCborValue_new21(tag: cint, taggedValue: pointer): ptr cQCborValue {.importc: "QCborValue_new21".}
proc fcQCborValue_new22(t_x: cint, tv: pointer): ptr cQCborValue {.importc: "QCborValue_new22".}
proc fcQCborValue_operatorAssign(self: pointer, other: pointer): void {.importc: "QCborValue_operatorAssign".}
proc fcQCborValue_swap(self: pointer, other: pointer): void {.importc: "QCborValue_swap".}
proc fcQCborValue_typeX(self: pointer, ): cint {.importc: "QCborValue_type".}
proc fcQCborValue_isInteger(self: pointer, ): bool {.importc: "QCborValue_isInteger".}
proc fcQCborValue_isByteArray(self: pointer, ): bool {.importc: "QCborValue_isByteArray".}
proc fcQCborValue_isString(self: pointer, ): bool {.importc: "QCborValue_isString".}
proc fcQCborValue_isArray(self: pointer, ): bool {.importc: "QCborValue_isArray".}
proc fcQCborValue_isMap(self: pointer, ): bool {.importc: "QCborValue_isMap".}
proc fcQCborValue_isTag(self: pointer, ): bool {.importc: "QCborValue_isTag".}
proc fcQCborValue_isFalse(self: pointer, ): bool {.importc: "QCborValue_isFalse".}
proc fcQCborValue_isTrue(self: pointer, ): bool {.importc: "QCborValue_isTrue".}
proc fcQCborValue_isBool(self: pointer, ): bool {.importc: "QCborValue_isBool".}
proc fcQCborValue_isNull(self: pointer, ): bool {.importc: "QCborValue_isNull".}
proc fcQCborValue_isUndefined(self: pointer, ): bool {.importc: "QCborValue_isUndefined".}
proc fcQCborValue_isDouble(self: pointer, ): bool {.importc: "QCborValue_isDouble".}
proc fcQCborValue_isDateTime(self: pointer, ): bool {.importc: "QCborValue_isDateTime".}
proc fcQCborValue_isUrl(self: pointer, ): bool {.importc: "QCborValue_isUrl".}
proc fcQCborValue_isRegularExpression(self: pointer, ): bool {.importc: "QCborValue_isRegularExpression".}
proc fcQCborValue_isUuid(self: pointer, ): bool {.importc: "QCborValue_isUuid".}
proc fcQCborValue_isInvalid(self: pointer, ): bool {.importc: "QCborValue_isInvalid".}
proc fcQCborValue_isContainer(self: pointer, ): bool {.importc: "QCborValue_isContainer".}
proc fcQCborValue_isSimpleType(self: pointer, ): bool {.importc: "QCborValue_isSimpleType".}
proc fcQCborValue_isSimpleTypeWithSt(self: pointer, st: cint): bool {.importc: "QCborValue_isSimpleTypeWithSt".}
proc fcQCborValue_toSimpleType(self: pointer, ): cint {.importc: "QCborValue_toSimpleType".}
proc fcQCborValue_toInteger(self: pointer, ): clonglong {.importc: "QCborValue_toInteger".}
proc fcQCborValue_toBool(self: pointer, ): bool {.importc: "QCborValue_toBool".}
proc fcQCborValue_toDouble(self: pointer, ): float64 {.importc: "QCborValue_toDouble".}
proc fcQCborValue_tag(self: pointer, ): cint {.importc: "QCborValue_tag".}
proc fcQCborValue_taggedValue(self: pointer, ): pointer {.importc: "QCborValue_taggedValue".}
proc fcQCborValue_toByteArray(self: pointer, ): struct_miqt_string {.importc: "QCborValue_toByteArray".}
proc fcQCborValue_toString(self: pointer, ): struct_miqt_string {.importc: "QCborValue_toString".}
proc fcQCborValue_toDateTime(self: pointer, ): pointer {.importc: "QCborValue_toDateTime".}
proc fcQCborValue_toUrl(self: pointer, ): pointer {.importc: "QCborValue_toUrl".}
proc fcQCborValue_toRegularExpression(self: pointer, ): pointer {.importc: "QCborValue_toRegularExpression".}
proc fcQCborValue_toUuid(self: pointer, ): pointer {.importc: "QCborValue_toUuid".}
proc fcQCborValue_toArray(self: pointer, ): pointer {.importc: "QCborValue_toArray".}
proc fcQCborValue_toArrayWithDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toArrayWithDefaultValue".}
proc fcQCborValue_toMap(self: pointer, ): pointer {.importc: "QCborValue_toMap".}
proc fcQCborValue_toMapWithDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toMapWithDefaultValue".}
proc fcQCborValue_operatorSubscript(self: pointer, key: struct_miqt_string): pointer {.importc: "QCborValue_operatorSubscript".}
proc fcQCborValue_operatorSubscript2(self: pointer, key: clonglong): pointer {.importc: "QCborValue_operatorSubscript2".}
proc fcQCborValue_operatorSubscript3(self: pointer, key: clonglong): pointer {.importc: "QCborValue_operatorSubscript3".}
proc fcQCborValue_operatorSubscript5(self: pointer, key: struct_miqt_string): pointer {.importc: "QCborValue_operatorSubscript5".}
proc fcQCborValue_compare(self: pointer, other: pointer): cint {.importc: "QCborValue_compare".}
proc fcQCborValue_operatorEqual(self: pointer, other: pointer): bool {.importc: "QCborValue_operatorEqual".}
proc fcQCborValue_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QCborValue_operatorNotEqual".}
proc fcQCborValue_operatorLesser(self: pointer, other: pointer): bool {.importc: "QCborValue_operatorLesser".}
proc fcQCborValue_fromVariant(variant: pointer): pointer {.importc: "QCborValue_fromVariant".}
proc fcQCborValue_toVariant(self: pointer, ): pointer {.importc: "QCborValue_toVariant".}
proc fcQCborValue_fromJsonValue(v: pointer): pointer {.importc: "QCborValue_fromJsonValue".}
proc fcQCborValue_toJsonValue(self: pointer, ): pointer {.importc: "QCborValue_toJsonValue".}
proc fcQCborValue_fromCbor(reader: pointer): pointer {.importc: "QCborValue_fromCbor".}
proc fcQCborValue_fromCborWithBa(ba: struct_miqt_string): pointer {.importc: "QCborValue_fromCborWithBa".}
proc fcQCborValue_fromCbor2(data: cstring, len: int64): pointer {.importc: "QCborValue_fromCbor2".}
proc fcQCborValue_fromCbor3(data: ptr uint8, len: int64): pointer {.importc: "QCborValue_fromCbor3".}
proc fcQCborValue_toCbor(self: pointer, ): struct_miqt_string {.importc: "QCborValue_toCbor".}
proc fcQCborValue_toCborWithWriter(self: pointer, writer: pointer): void {.importc: "QCborValue_toCborWithWriter".}
proc fcQCborValue_toDiagnosticNotation(self: pointer, ): struct_miqt_string {.importc: "QCborValue_toDiagnosticNotation".}
proc fcQCborValue_toSimpleType1(self: pointer, defaultValue: cint): cint {.importc: "QCborValue_toSimpleType1".}
proc fcQCborValue_toInteger1(self: pointer, defaultValue: clonglong): clonglong {.importc: "QCborValue_toInteger1".}
proc fcQCborValue_toBool1(self: pointer, defaultValue: bool): bool {.importc: "QCborValue_toBool1".}
proc fcQCborValue_toDouble1(self: pointer, defaultValue: float64): float64 {.importc: "QCborValue_toDouble1".}
proc fcQCborValue_tag1(self: pointer, defaultValue: cint): cint {.importc: "QCborValue_tag1".}
proc fcQCborValue_taggedValue1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_taggedValue1".}
proc fcQCborValue_toByteArray1(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QCborValue_toByteArray1".}
proc fcQCborValue_toString1(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QCborValue_toString1".}
proc fcQCborValue_toDateTime1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toDateTime1".}
proc fcQCborValue_toUrl1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toUrl1".}
proc fcQCborValue_toRegularExpression1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toRegularExpression1".}
proc fcQCborValue_toUuid1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValue_toUuid1".}
proc fcQCborValue_fromCbor22(ba: struct_miqt_string, error: pointer): pointer {.importc: "QCborValue_fromCbor22".}
proc fcQCborValue_fromCbor32(data: cstring, len: int64, error: pointer): pointer {.importc: "QCborValue_fromCbor32".}
proc fcQCborValue_fromCbor33(data: ptr uint8, len: int64, error: pointer): pointer {.importc: "QCborValue_fromCbor33".}
proc fcQCborValue_toCbor1(self: pointer, opt: cint): struct_miqt_string {.importc: "QCborValue_toCbor1".}
proc fcQCborValue_toCbor2(self: pointer, writer: pointer, opt: cint): void {.importc: "QCborValue_toCbor2".}
proc fcQCborValue_toDiagnosticNotation1(self: pointer, opts: cint): struct_miqt_string {.importc: "QCborValue_toDiagnosticNotation1".}
proc fcQCborValue_delete(self: pointer) {.importc: "QCborValue_delete".}
proc fcQCborValueRef_new(param1: pointer): ptr cQCborValueRef {.importc: "QCborValueRef_new".}
proc fcQCborValueRef_ToQCborValue(self: pointer, ): pointer {.importc: "QCborValueRef_ToQCborValue".}
proc fcQCborValueRef_operatorAssign(self: pointer, other: pointer): void {.importc: "QCborValueRef_operatorAssign".}
proc fcQCborValueRef_operatorAssignWithOther(self: pointer, other: pointer): void {.importc: "QCborValueRef_operatorAssignWithOther".}
proc fcQCborValueRef_typeX(self: pointer, ): cint {.importc: "QCborValueRef_type".}
proc fcQCborValueRef_isInteger(self: pointer, ): bool {.importc: "QCborValueRef_isInteger".}
proc fcQCborValueRef_isByteArray(self: pointer, ): bool {.importc: "QCborValueRef_isByteArray".}
proc fcQCborValueRef_isString(self: pointer, ): bool {.importc: "QCborValueRef_isString".}
proc fcQCborValueRef_isArray(self: pointer, ): bool {.importc: "QCborValueRef_isArray".}
proc fcQCborValueRef_isMap(self: pointer, ): bool {.importc: "QCborValueRef_isMap".}
proc fcQCborValueRef_isTag(self: pointer, ): bool {.importc: "QCborValueRef_isTag".}
proc fcQCborValueRef_isFalse(self: pointer, ): bool {.importc: "QCborValueRef_isFalse".}
proc fcQCborValueRef_isTrue(self: pointer, ): bool {.importc: "QCborValueRef_isTrue".}
proc fcQCborValueRef_isBool(self: pointer, ): bool {.importc: "QCborValueRef_isBool".}
proc fcQCborValueRef_isNull(self: pointer, ): bool {.importc: "QCborValueRef_isNull".}
proc fcQCborValueRef_isUndefined(self: pointer, ): bool {.importc: "QCborValueRef_isUndefined".}
proc fcQCborValueRef_isDouble(self: pointer, ): bool {.importc: "QCborValueRef_isDouble".}
proc fcQCborValueRef_isDateTime(self: pointer, ): bool {.importc: "QCborValueRef_isDateTime".}
proc fcQCborValueRef_isUrl(self: pointer, ): bool {.importc: "QCborValueRef_isUrl".}
proc fcQCborValueRef_isRegularExpression(self: pointer, ): bool {.importc: "QCborValueRef_isRegularExpression".}
proc fcQCborValueRef_isUuid(self: pointer, ): bool {.importc: "QCborValueRef_isUuid".}
proc fcQCborValueRef_isInvalid(self: pointer, ): bool {.importc: "QCborValueRef_isInvalid".}
